MDEV-28731 Race condition on log checkpoint

mtr_t::modify(): Set the m_made_dirty flag if needed,
so that buf_pool_t::insert_into_flush_list() will be invoked
while holding log_sys.flush_order_mutex.

This is something that was should have been part of
commit b212f1dac284cc9b7a060f1eed2cd4604c326966 (MDEV-22107).